troubleshooting header image in mobile cont'd

--- a/css/main.css
+++ b/css/main.css
@@ -1898,6 +1898,7 @@
         .coda-header .coda-background-img {
           -o-object-position: 70% 50%;
              object-position: 70% 50%;
+             object-position: right top;
         }
 
         .coda-header-text .coda-profession {
