--- a/css/main.css
+++ b/css/main.css
@@ -812,6 +812,12 @@
               transform: translate(0);
       -webkit-animation: codaScale 60s ease-in-out alternate infinite;
               animation: codaScale 60s ease-in-out alternate infinite;
+
+              @media only screen and (max-width: 767px) {
+                .coda-header .coda-background-img {
+                  object-position: left 50%;
+                }
+              }
     }
 
     @-webkit-keyframes codaScale {
@@ -1914,6 +1920,12 @@
           margin-top: 44px;
         }
 
+        @media (max-width: 480px) {
+          #coda-about {
+            background-size: contain;
+          }
+        }
+
         /* ------------------------------------------------------
             Section
         ------------------------------------------------------ */
@@ -2185,6 +2197,11 @@
           font-size: 66px;
         }
 
+        @media (max-width: 480px) {
+  #coda-about {
+    background-size: contain;
+  }
+}
         /* ------------------------------------------------------
             Section
         ------------------------------------------------------ */
